--- a/portal-web/docroot/html/themes/classic/_diffs/css/custom_responsive.css
+++ b/portal-web/docroot/html/themes/classic/_diffs/css/custom_responsive.css
@@ -190,6 +190,10 @@
 			}
 		}
 
+		.page-customization-bar {
+			margin-bottom: 4em;
+		}
+
 		.portlet-dockbar {
 			display: inline-block;
 			width: 100%;
